fix character overlap in toc (between caret-down and title)

--- a/Resources/Private/Less/modules/sidebar.less
+++ b/Resources/Private/Less/modules/sidebar.less
@@ -329,7 +329,7 @@ ul.toc {
     line-height: 1.2;
     a, span.a {
         position: relative;
-        padding: 8px 36px 8px 10px;
+        padding: 8px 36px 8px 18px;
         display: block;
         color: #fff;
         overflow: hidden;
